springboot2(com.vilin.myspringboot.WebController.java;com.vilin.myspringboot.entity.Employee.java;com.vilin.myspringboot.entity.Department.java;/templates/employee_info.html;/templates/header_footer.html): springboot MVC.

--- a/src/main/resources/templates/header_footer.html
+++ b/src/main/resources/templates/header_footer.html
@@ -7,7 +7,7 @@
 <body>
     <nav class="navbar navbar-default" th:fragment="header">
         <div class="container" style="">
-            <h2>《Spring Boot 实战》系列课实战案例--使用模板</h2>
+            <h2 style="text-align : center">《Spring Boot 实战》系列课实战案例--使用模板</h2>
         </div>
     </nav>
 </body>
