--- a/src/main/resources/templates/employee_info.html
+++ b/src/main/resources/templates/employee_info.html
@@ -40,12 +40,44 @@
                 minView: 2,
                 forceParse: 0,
                 format: 'yyyy-mm-dd'
-            })
-
-            ${"#btnAdd"}.click(function () {
-                $("#dlgForm").modal();
             });
-        })
+            //点击添加按钮弹出对话框
+            $("#btnAdd").click(function () {
+                $("#dlgForm").modal();
+                $.ajax({
+                    url : "/deptinfo",
+                    type : "get",
+                    dataType : "json",
+                    success : function (json) {
+                        //接受来自服务器返回的JSON字符串，并将其转化为json对象
+                        $("#dept").get(0).length = 0;
+                        for(var i = 0; i < json.length; i++){
+                            var d = json[i];
+                            //获取到原生的DOM对象，只有原生的对象才有原生的option属性
+                            $("#dept").get(0).options.add(new Option(d.name));
+                        }
+                    }
+                })
+            });
+
+            $("#dept").change(function () {
+                var dept = $(this).val();
+                $.ajax({
+                    url : "/job?dept=" + dept,
+                    dataType : "json",
+                    type: "get",
+                    success : function (json) {
+                        $("#job").get(0).length = 0;
+                        for(var i = 0; i < json.length; i++){
+                            var job = json[i];
+                            //获取到原生的DOM对象，只有原生的对象才有原生的option属性
+                            $("#job").get(0).options.add(new Option(job));
+                        }
+                    }
+
+                })
+            })
+        });
     </script>
 </head>
 <body>
@@ -116,7 +148,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span></span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">Modal title</h4>
             </div>
             <div class="modal-body">
@@ -130,8 +162,14 @@
                         <input type="text" class="form-control" id="ename" placeholder="请输入员工姓名">
                     </div>
                     <div class="form-group">
+                        <label>部门</label>
+                        <select class="form-control" id="dept">
+                            <option>请选择</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
                         <label>岗位</label>
-                        <select class="form-control">
+                        <select class="form-control" id="job">
                             <option>请选择</option>
                         </select>
                     </div>
@@ -147,7 +185,7 @@
                         <label for="phone">员工照片</label>
                         <input type="file" id="phone">
                     </div>
-                    <div class="form-control">
+                    <div class="form-group">
                         <button type="submit" class="btn btn-primary">保存</button>
                     </div>
                 </form>
