--- a/src/main/resources/templates/employee_info.html
+++ b/src/main/resources/templates/employee_info.html
@@ -39,7 +39,7 @@
                 startView: 2,
                 minView: 2,
                 forceParse: 0,
-                format: 'yyyy-mm-dd'
+                format: 'yyyy-MM-dd'
             });
             //点击添加按钮弹出对话框
             $("#btnAdd").click(function () {
@@ -152,38 +152,39 @@
                 <h4 class="modal-title">Modal title</h4>
             </div>
             <div class="modal-body">
-                <form>
+                <!-- 网页具备文件上传的三个条件：1.POST提交；2.具备file组件；3.设置表单的enctype="mutipart/form-data"，默认表单的enctype是x-www-urlencoding -->
+                <form action="/addemp" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="empno">员工编号</label>
-                        <input type="text" class="form-control" id="empno" placeholder="请输入员工编号">
+                        <input type="text" name="id" class="form-control" id="empno" placeholder="请输入员工编号">
                     </div>
                     <div class="form-group">
                         <label for="ename">员工姓名</label>
-                        <input type="text" class="form-control" id="ename" placeholder="请输入员工姓名">
+                        <input type="text" name="name" class="form-control" id="ename" placeholder="请输入员工姓名">
                     </div>
                     <div class="form-group">
                         <label>部门</label>
-                        <select class="form-control" id="dept">
+                        <select class="form-control" name="department" id="dept">
                             <option>请选择</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <label>岗位</label>
-                        <select class="form-control" id="job">
+                        <select class="form-control" name="position" id="job">
                             <option>请选择</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <label for="hiredate">入职时间</label>
-                        <input type="text" class="form-control" id="hiredate" placeholder="请输入员工入职时间">
+                        <input type="text" name="hiredate" class="form-control" id="hiredate" placeholder="请输入员工入职时间">
                     </div>
                     <div class="form-group">
                         <label for="salary">工资</label>
-                        <input type="text" class="form-control" id="salary" placeholder="请输入员工工资">
+                        <input type="text" name="salary" class="form-control" id="salary" placeholder="请输入员工工资">
                     </div>
                     <div class="form-group">
-                        <label for="phone">员工照片</label>
-                        <input type="file" id="phone">
+                        <label for="photo">员工照片</label>
+                        <input type="file" id="photo" name="photo">
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary">保存</button>
