--- a/src/main/resources/templates/idx.html
+++ b/src/main/resources/templates/idx.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Bootstrap</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1"></meta>
-    <link href="css/bootstrap.css" type="text/css" rel="stylesheet"/>
+    <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
     <script src="js/jquery-1.11.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
 
 <body>
